src/objects/Outbound_Telecall_Questionnaire__c.object
<CustomObject>
    <fields>
        <fullName>Lead__c</fullName>
        <description>It is a look-up to Lead</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Outbound Telecall Questionnaire</relationshipLabel>
        <relationshipName>Outbound_Telecall_Questionnaire</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q1_Select_Vertical__c</fullName>
        <label>Select Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q2_What_is_your_understanding_of_what_Z__c</fullName>
        <label>What can Zebra offer your business?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q3_How_many_beds_do_you_have__c</fullName>
        <label>Number of beds?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3_How_many_stores_do_you_have_in_EMEA__c</fullName>
        <label>Number of stores in EMEA?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3_In_what_areas_are_you_looking_to_imp__c</fullName>
        <label>Areas of upgrade to supply chain?</label>
        <picklist>
            <picklistValues>
                <fullName>Asset tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedside labelling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blood component labelling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laboratory sample labelling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medication labelling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical record identification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Identification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radiology film labelling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sterile equipment processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ultrasound /ECG results labelling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify in notes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q4_How_do_you_track_and_identify_the_co__c</fullName>
        <label>How do you ID components/tools/equipment</label>
        <picklist>
            <picklistValues>
                <fullName>Manual tracking (paper based)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1D barcodes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2D barcodes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WLAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real-time location based services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet of things</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q4_In_what_areas_are_you_looking_to_imp__c</fullName>
        <label>Areas of upgrade to patient id/safety?</label>
        <picklist>
            <picklistValues>
                <fullName>Productivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost reductions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error reductions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better visibility over supply chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality &amp; traceability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise asset management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety and compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial wireless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory and materials management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify in notes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q4_In_what_areas_are_you_to_imp_cust__c</fullName>
        <label>Areas to improve customer experience?</label>
        <picklist>
            <picklistValues>
                <fullName>Customer experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Loyalty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales and promotions in store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchandise and stock level management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer deliveries – click and collect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer deliveries – home delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy labelling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify in bye screen)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q5_How_do_you_physically_identify_patie__c</fullName>
        <label>How do you physically identify patients?</label>
        <picklist>
            <picklistValues>
                <fullName>Wristbands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient name on bed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient name on case notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal ID only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No formal ID process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify in notes)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q5_How_many_production_sites_do_you_hav__c</fullName>
        <label>Number of production sites worldwide?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q6_How_do_you_currently_identify_specim__c</fullName>
        <label>How do you ID specimens taken at bedside</label>
        <picklist>
            <picklistValues>
                <fullName>Hand write labels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-printed labels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile printer printing labels at bedside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify in notes)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q7_Which_part_of_the_supply_chain_do_yo__c</fullName>
        <label>Area of supply chain you work in?</label>
        <picklist>
            <picklistValues>
                <fullName>Plant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehousing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Delivery/Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Outbound Telecall Questionnaire</label>
    <nameField>
        <label>Outbound Telecall Questionnaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outbound Telecall Questionnaire</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>